fix: httpmessage in model package
