# docs/swagger.json
@@ -26,7 +26,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     }
                 }
@@ -97,13 +97,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     }
                 }
@@ -137,25 +137,25 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     }
                 }
@@ -192,19 +192,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     }
                 }
@@ -246,25 +246,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     }
                 }
@@ -293,19 +293,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     }
                 }
@@ -332,7 +332,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/respond.HTTPMessage"
+                            "$ref": "#/definitions/model.HTTPMessage"
                         }
                     }
                 }
@@ -420,6 +420,27 @@
                     "type": "string",
                     "format": "string",
                     "example": "ThisIs4Passw0rd"
+                }
+            }
+        },
+        "model.HTTPMessage": {
+            "description": "HTTPMessage represents a message to be sent to the client though the HTTP REST API.",
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "method": {
+                    "type": "string"
+                },
+                "path": {
+                    "type": "string"
+                },
+                "status_code": {
+                    "type": "integer"
+                },
+                "timestamp": {
+                    "type": "string"
                 }
             }
         },
@@ -561,26 +582,6 @@
                     "type": "string",
                     "format": "date-time",
                     "example": "2021-01-01T00:00:00Z"
-                }
-            }
-        },
-        "respond.HTTPMessage": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                },
-                "method": {
-                    "type": "string"
-                },
-                "path": {
-                    "type": "string"
-                },
-                "status_code": {
-                    "type": "integer"
-                },
-                "timestamp": {
-                    "type": "string"
                 }
             }
         }
